[ticket/10472] Fix ACP overflow:hidden problem for medium-sized screens
PHPBB3-10472

--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -182,6 +182,12 @@ li {
 	margin-bottom: 10px;
 }
 
+#page-header:after {
+	content: '';
+	clear: both;
+	display: block;
+}
+
 .rtl #page-header {
 	text-align: left;
 	background: url("../images/phpbb_logo.png") top right no-repeat;
@@ -203,8 +209,13 @@ li {
 }
 
 #page-body {
-	clear: both;
 	min-width: 650px;
+}
+
+#page-body:after {
+	content: '';
+	clear: both;
+	display: block;
 }
 
 #page-footer {
@@ -502,6 +513,12 @@ li {
 	border: 1px #999999 solid;
 	border-radius: 5px;
 	box-shadow: #FFF 0 0 0 1px inset;
+}
+
+#acp:after {
+	content: '';
+	clear: both;
+	display: block;
 }
 
 #acp:first-child {
@@ -1139,6 +1156,10 @@ input:hover, textarea:hover {
 
 input.langvalue, textarea.langvalue {
 	width: 90%;
+}
+
+input[type="number"], dd input[type="number"] {
+	width: 60px;
 }
 
 optgroup, select {
@@ -1897,7 +1918,7 @@ li.pagination ul {
 	visibility: hidden;
 }*/
 
-.clearfix, .row, #content, fieldset dl, #page-body {
+.clearfix, .row, fieldset dl {
 	overflow: hidden;
 }
 
